<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:layout_marginTop="16dp"
    android:background="?attr/selectableItemBackgroundBorderless">

    <com.nimboweather.forecast.ui.home.CompassDialView
        android:id="@+id/dial"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
